SERVER-54507 Can't execute merge if sharding catalog cache is empty