src/mongo/s/catalog_cache.h
@@ -172,17 +172,6 @@ public:
         const ShardId& shardId);
 
     /**
-     * Throws a StaleConfigException if this catalog cache does not have an entry for the given
-     * namespace, or if the entry for the given namespace does not have the same epoch as
-     * 'targetCollectionVersion'. Does not perform any refresh logic. Ignores everything except the
-     * epoch of 'targetCollectionVersion' when performing the check, but needs the entire target
-     * version to throw a StaleConfigException.
-     */
-    void checkEpochOrThrow(const NamespaceString& nss,
-                           const ChunkVersion& targetCollectionVersion,
-                           const ShardId& shardId);
-
-    /**
      * Non-blocking method, which invalidates all namespaces which contain data on the specified
      * shard and all databases which have the shard listed as their primary shard.
      */
